# dyn-fn

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: async_trait.rs  box_dyn_fn.rs
docs/: crates.js  help.html  index.html  settings.html  src-files.js
docs/dyn_fn/: all.html  index.html  sidebar-items.js  struct.DynAsyncFn.html  struct.DynAsyncFnMut.html  struct.DynAsyncFnOnce.html  struct.DynFn.html  struct.DynFnMut.html  struct.DynFnOnce.html  struct.LocalDynAsyncFn.html  struct.LocalDynAsyncFnMut.html  struct.LocalDynAsyncFnOnce.html  struct.LocalDynFn.html  struct.LocalDynFnMut.html  struct.LocalDynFnOnce.html  trait.AsyncFnMutSend.html  trait.AsyncFnOnceSend.html  trait.AsyncFnSend.html
docs/dyn_fn/async/: struct.DynAsyncFn.html  struct.DynAsyncFnMut.html  struct.DynAsyncFnOnce.html  struct.LocalDynAsyncFn.html  struct.LocalDynAsyncFnMut.html  struct.LocalDynAsyncFnOnce.html  trait.AsyncFnMutSend.html  trait.AsyncFnOnceSend.html  trait.AsyncFnSend.html
docs/dyn_fn/storage/: index.html  sidebar-items.js  struct.Arc.html  struct.Box.html  struct.Raw.html  struct.RawOrBox.html  struct.Rc.html  trait.Storage.html  trait.StorageMut.html  trait.StorageSend.html  type.DefaultFnStorage.html  (+1 more)
docs/search.index/: 075b69a1ae9e.js  116ec83aed28.js  213a998753cc.js  293b3d5a965d.js  3cb54852b5cb.js  5222f1c4ae1d.js  57d717748c05.js  582f12588b46.js  5ea21249a1c2.js  root.js
src/: async.rs  lib.rs  macros.rs  storage.rs  sync.rs
tests/: compilation.rs  test.rs
tests/compilation/: local.rs  local.stderr  not-local.rs
(+32 files in other folders)
