[package]
name = "dyn-fn"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["alloc"]
alloc = []

[dependencies]
elain = "0.3"
higher-kinded-types = "0.3.0"

[dev-dependencies]
async-trait = "0.1"
futures-util = "0.3"
divan = "0.1"
trybuild = "1"

[[bench]]
name = "async_trait"
harness = false
required-features = ["alloc"]

[[bench]]
name = "box_dyn_fn"
harness = false
required-features = ["alloc"]

[lib]
bench = false

[lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

